crates/swc_ecma_parser/tests/test262-error-references/fail/96060983e86029b6.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/96060983e86029b6.js:1:5
  |
1 | var [a];
  |     ^^^

